2006-08-07  Steve Fink <sphink@gmail.com>

	* display_args.c, etc/ltrace.conf, ltrace.h, read_config_file.c,
	testsuite/ltrace.main/parameters-lib.c,
	testsuite/ltrace.main/parameters.c,
	testsuite/ltrace.main/parameters.conf,
	testsuite/ltrace.main/parameters.exp: short, ushort and float types

2006-08-07  Steve Fink <sphink@gmail.com>

	* display_args.c, etc/ltrace.conf, ltrace.h, read_config_file.c,
	testsuite/ltrace.main/parameters-lib.c,
	testsuite/ltrace.main/parameters.c,
	testsuite/ltrace.main/parameters.conf,
	testsuite/ltrace.main/parameters.exp: implement enumerated parameters

2006-08-07  Steve Fink <sphink@gmail.com>

	* testsuite/ltrace.main/Makefile.in :  update testsuite for
	new parameters
	* testsuite/ltrace.main/parameters-lib.c : added
	* testsuite/ltrace.main/parameters.c : added
	* testsuite/ltrace.main/parameters.conf : added
	* testsuite/ltrace.main/parameters.exp : added

2006-08-07  Steve Fink  <sphink@gmail.com>

	* display_args.c, etc/ltrace.conf, ltrace.h, read_config_file.c,
	sysdeps/README, sysdeps/linux-gnu-trace.c : switch to passing
	around values rather than argument numbers that need to be fetched
	(needed for pointer params)

2006-08-07  Steve Fink <sphink@gmail.com>

	* display_args.c, etc/ltrace.conf, ltrace.h, read_config_file.c:
	implement ignored arguments

2006-08-07  Steve Fink <sphink@gmail.com>

	* display_args.c, etc/ltrace.conf, ltrace.h, read_config_file.c:
	implement string[argN] and string[N] parameter descriptors

2006-08-07  Steve Fink <sphink@gmail.com>

	* ltrace.h, output.c, read_config_file.c : use arg_type_info in
	place of arg_type in order to eventually be able to record
	properties along with types.

2006-07-20  Steve Fink <sphink@gmail.com>

	* testsuite/lib/ltrace.exp: better quoting and error detection for
	ltrace_verify_output's call to grep

2006-08-07  Steve Fink  <sphink@gmail.com>

	* ltrace.1: update bug email addr

2006-07-26  Ian Wienand  <ianw@debian.org>
