@@ -32,6 +32,15 @@
 ; string0	== (char *)			[same as string[retval]]
 ; stringN	== (char *)		[N>0]	[same as string[argN]]
 
+; Typedefs
+;
+; To make it easier to specify argument lists, you can use 'typedef'
+; directives to avoid repeating complex parameter descriptors:
+;
+;   typedef color = enum(RED=1,BLUE=2,GREEN=3)
+;   void draw_line(color,int,int,int,int)
+;   void draw_square(color,int,int,int,int)
+;
 ; Enumerations
 ;
 ; The syntax is a parenthesized list of key=value assignments, like so:
