@@ -1,5 +1,13 @@
 2006-08-07  Steve Fink <sphink@gmail.com>
 
+	* etc/ltrace.conf, read_config_file.c,
+	testsuite/ltrace.main/parameters-lib.c,
+	testsuite/ltrace.main/parameters.c,
+	testsuite/ltrace.main/parameters.conf,
+	testsuite/ltrace.main/parameters.exp: add ability to typedef
+
+2006-08-07  Steve Fink <sphink@gmail.com>
+
 	* display_args.c, etc/ltrace.conf, ltrace.h, read_config_file.c,
 	testsuite/ltrace.main/parameters-lib.c,
 	testsuite/ltrace.main/parameters.c,
